--- a/wiki/de/Books.html
+++ b/wiki/de/Books.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Books/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Books&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Books.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Books (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Livres (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Libri (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Ksi&#261;&#380;ki o FreeCAD (96% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Books.html" class="mw-pt-progress mw-pt-progress--complete" title="Ksi&#261;&#380;ki o FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Books.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1085;&#1080;&#1075;&#1080; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Books.html" class="mw-pt-progress mw-pt-progress--high" title="&#52293; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <p>Auf dieser Seite sind die uns bekannten B&uuml;cher &uuml;ber FreeCAD aufgelistet:
@@ -22,12 +22,8 @@
 <li>Modelle f&uuml;r den 3D-Druck mit einer Slicer-Software vorbereiten und sie exportieren, um sicherzustellen, dass die Entw&uuml;rfe f&uuml;r die Produktion bereit sind.</li>
 <li>Projekte durchf&uuml;hren, die einem die praktischen Anwendungen des 3D-Designs vermitteln, darunter praktische Gadgets und ein Mars-Rover-Projekt, um die F&auml;higkeiten zu festigen.</li></ul>
 <p>Am Ende dieses Buches wird man in der Lage sein, die eigenen innovativen Gadgets zu entwerfen, reale technische L&ouml;sungen zu erkunden und selbstbewusst Modelle f&uuml;r den 3D-Druck vorzubereiten. Das enthaltene Mars-Rover-Projekt bietet eine herausfordernde, aber lohnende Gelegenheit, alle erlernten Techniken in einem einzigen, zusammenh&auml;ngenden Entwurf anzuwenden.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The FreeCAD Beginner's Handbook was sponsored by Prusa Research.
-</p>
-</div>
-<p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
+</p><p>Das FreeCAD Beginner's Handbook wurde von  Prusa Research gesponsert.
+</p><p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
 </p>
 <div style="clear:both"></div>
 <p><span id="FreeCAD_for_Makers"></span>
@@ -72,27 +68,27 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125846
+Cached time: 20260124205646
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.037 seconds
-Preprocessor visited node count: 44/1000000
+CPU time usage: 0.033 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 43/1000000
 Post&#8208;expand include size: 150/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1348/5000000 bytes
+Unstrip post&#8208;expand size: 1357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.990      1 -total
- 86.82%    1.728      5 Template:Clear
+100.00%    2.591      1 -total
+ 84.60%    2.192      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302897-0!canonical and timestamp 20260124125845 and revision id 1743400. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302897-0!canonical and timestamp 20260124205646 and revision id 1743486. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
