--- a/wiki/fr/Books.html
+++ b/wiki/fr/Books.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Books/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Books&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Books.html" class="mw-pt-progress mw-pt-progress--high" title="B&uuml;cher (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Books.html" class="mw-pt-progress mw-pt-progress--complete" title="B&uuml;cher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Books.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Books (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Libri (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Ksi&#261;&#380;ki o FreeCAD (96% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Books.html" class="mw-pt-progress mw-pt-progress--complete" title="Ksi&#261;&#380;ki o FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Books.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1085;&#1080;&#1075;&#1080; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Books.html" class="mw-pt-progress mw-pt-progress--high" title="&#52293; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <p>Cette page liste les livres sur FreeCAD que nous connaissons&nbsp;:
@@ -23,12 +23,8 @@
 <li>Pr&eacute;parez et exportez des mod&egrave;les pour l'impression 3D &agrave; l'aide d'un logiciel de d&eacute;coupage, en vous assurant que vos conceptions sont pr&ecirc;tes pour la production.</li>
 <li>R&eacute;alisez des projets qui enseignent les applications concr&egrave;tes de la conception 3D, notamment des gadgets pratiques et un projet de rover martien pour consolider vos comp&eacute;tences.</li></ul>
 <p>&Agrave; la fin de ce livre, vous serez capable de concevoir vos propres gadgets innovants, d'explorer des solutions d'ing&eacute;nierie concr&egrave;tes et de pr&eacute;parer en toute confiance des mod&egrave;les pour l'impression 3D. Le projet Mars Rover inclus offre une opportunit&eacute; stimulante et enrichissante d'appliquer toutes les techniques apprises dans une conception unique et coh&eacute;rente.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The FreeCAD Beginner's Handbook was sponsored by Prusa Research.
-</p>
-</div>
-<p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
+</p><p>Le manuel du d&eacute;butant FreeCAD a &eacute;t&eacute; parrain&eacute; par Prusa Research.
+</p><p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
 </p>
 <div style="clear:both"></div>
 <p><span id="FreeCAD_for_Makers"></span>
@@ -79,27 +75,27 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125837
+Cached time: 20260125092356
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.030 seconds
 Real time usage: 0.053 seconds
-Preprocessor visited node count: 48/1000000
+Preprocessor visited node count: 47/1000000
 Post&#8208;expand include size: 150/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1349/5000000 bytes
+Unstrip post&#8208;expand size: 1363/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.022      1 -total
- 88.47%    1.789      5 Template:Clear
+100.00%    1.639      1 -total
+ 84.86%    1.391      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:298400-0!canonical and timestamp 20260124125837 and revision id 1743397. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:298400-0!canonical and timestamp 20260125092356 and revision id 1743488. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
