--- a/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
@@ -62,9 +62,9 @@
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Choisir les attributs d'une ligne</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Choisir les attributs d'une ligne</b> du menu.</li></ul></li>
 <li>Le panneau de t&acirc;ches <b>Choisir les attributs de la ligne</b> s'ouvre.</li>
-<li>Changez &agrave; votre convenance <b>Style des lignes</b>, <b>Largeur des lignes</b> et <b>Couleur des lignes</b>.</li>
-<li>Vous pouvez &eacute;galement modifier <b>Espacement en cascade</b>. Les outils <a href="../fr/TechDraw_Workbench.html#Attributs/modifications" title="TechDraw Workbench/fr">Cotes en cascade</a> et <a href="../fr/TechDraw_Workbench.html#Formater/organiser_les_cotes" title="TechDraw Workbench/fr">Cotes parall&egrave;les</a> utilisent cette valeur.</li>
-<li>Vous pouvez &eacute;galement modifier <b>Longueur</b>. Les outils <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">TechDraw Prolonger</a> et <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">TechDraw Raccourcir</a> utilisent cette valeur.</li>
+<li>Vous pouvez modifier <b>Style des lignes</b>, <b>Largeur des lignes</b> et <b>Couleur des lignes</b>.</li>
+<li>Vous pouvez modifier <b>Espacement en cascade</b>. Les outils <a href="../fr/TechDraw_Workbench.html#Attributs/modifications" title="TechDraw Workbench/fr">Cotes en cascade</a> et <a href="../fr/TechDraw_Workbench.html#Formater/organiser_les_cotes" title="TechDraw Workbench/fr">Cotes parall&egrave;les</a> utilisent cette valeur.</li>
+<li>Vous pouvez modifier <b>Longueur</b>. Les outils <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">TechDraw Prolonger</a> et <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">TechDraw Raccourcir</a> utilisent cette valeur.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
 <p><span id="Notes"></span>
 </p>
@@ -117,12 +117,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124130746
+Cached time: 20260125093013
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.121 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 404/1000000
 Post&#8208;expand include size: 26274/2097152 bytes
 Template argument size: 10310/2097152 bytes
@@ -133,18 +133,18 @@ Unstrip post&#8208;expand size: 1418/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.812      1 -total
- 36.89%    8.784      1 Template:TechDraw_Tools_navi/fr
- 28.61%    6.813      2 Template:Navigation_menu_2
- 18.34%    4.368      1 Template:Userdocnavi/fr
- 11.76%    2.801      1 Template:GuiCommand/fr
- 10.55%    2.513      2 Template:Docnav/fr
-  7.29%    1.736      1 Template:Caption
-  5.65%    1.345      7 Template:MenuCommand
-  5.09%    1.211      2 Template:Button
+100.00%   29.658      1 -total
+ 37.37%   11.083      1 Template:TechDraw_Tools_navi/fr
+ 29.26%    8.677      2 Template:Navigation_menu_2
+ 17.56%    5.207      1 Template:Userdocnavi/fr
+ 13.04%    3.868      1 Template:GuiCommand/fr
+ 10.85%    3.218      2 Template:Docnav/fr
+  7.37%    2.187      1 Template:Caption
+  6.05%    1.794      7 Template:MenuCommand
+  4.75%    1.409      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124130746 and revision id 1743413. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260125093013 and revision id 1743492. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
