--- a/wiki/fr/TechDraw_ExtensionExtendLine.html
+++ b/wiki/fr/TechDraw_ExtensionExtendLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionExtendLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionExtendLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionExtendLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLinieVerl&auml;ngern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionExtendLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionExtendLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionExtendLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Estendi linea (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionExtendLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Przed&#322;u&#380; lini&#281; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionExtendLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#49440; &#50672;&#51109; (78% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -59,14 +59,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance la distance delta avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez modifier la distance delta avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez une seule ligne cosm&eacute;tique ou une ligne centrale.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Prolonger une ligne</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Prolonger une ligne</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Prolonger une ligne</b> du menu.</li></ul></li>
 <li>La ligne est prolong&eacute;e &agrave; ses deux extr&eacute;mit&eacute;s.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -114,34 +112,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125093436
+Cached time: 20260125093530
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.095 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25702/2097152 bytes
-Template argument size: 10090/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25689/2097152 bytes
+Template argument size: 10077/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1472/5000000 bytes
+Unstrip post&#8208;expand size: 1476/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.788      1 -total
- 33.36%    6.601      1 Template:TechDraw_Tools_navi/fr
- 25.99%    5.143      2 Template:Navigation_menu_2
- 19.07%    3.774      1 Template:Userdocnavi/fr
- 11.94%    2.362      2 Template:Docnav/fr
-  9.86%    1.951      1 Template:GuiCommand/fr
-  8.33%    1.648      1 Template:MenuCommand
-  8.31%    1.644      1 Template:Caption
-  6.35%    1.257      1 Template:Button
+100.00%   21.481      1 -total
+ 29.89%    6.420      1 Template:TechDraw_Tools_navi/fr
+ 23.91%    5.135      1 Template:GuiCommand/fr
+ 21.10%    4.532      2 Template:Navigation_menu_2
+ 14.90%    3.200      1 Template:Userdocnavi/fr
+ 10.93%    2.347      2 Template:Docnav/fr
+  7.53%    1.617      1 Template:Caption
+  6.28%    1.349      1 Template:Button
+  4.00%    0.860      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277544-0!canonical and timestamp 20260125093436 and revision id 1743496. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277544-0!canonical and timestamp 20260125093530 and revision id 1743498. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
